@@ -62,7 +62,7 @@ The full change log is available [here](https://github.com/MarcusWolschon/osmedi
 
 # Known problems
 
-* Due to a change in the way Android N handles URIs that reference on-device files it may not be possible to display photos that are not in the Vespucci folder.
+* Due to a change in the way Android N handles URIs that reference on-device files it may not be possible to display photos that are on removable storage. The current workaround of this problem may not work on your device or go away in future Android versions. 
 * Some manipulations of very small objects (dimensions roughly 1 meter and smaller), in particular rotation, orthogonalisation and arranging in a circle will possibly not show good results due to the maximum resolution of OSM data which is roughly 1cm at the equator.
 
 # Upgrading from previous versions
