@@ -1,5 +1,7 @@
 ﻿See https://github.com/MarcusWolschon/osmeditor4android/ for documentation on this version and all changes.
 
+1293: Fix various photo display related issues, update documentation and translations.
+
 1292: Fix issue with chunks in optional preset sections, update presets, translations and opening hours fragment.
 
 1289: Update presets (with lane preset typo fix), documentation improvements.
